--- a/index.html
+++ b/index.html
@@ -1,73 +1,89 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Ganesh Murugan</title>
-
-  <meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Ganesh M">
-
-	<link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
-	<link rel="stylesheet" href="css/bootstrap.min.css">
-	<link rel="stylesheet" href="css/styles.css">
-
-
+    <title>Ganesh Murugan</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="author" content="Ganesh M">
+    <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.3/js/all.js"></script>
 </head>
-<body>
-	<div class="container">
-		<header class="row">
-			<div class="col-md-6">
-				<img src="img/profileimg.jpg" class="profile-picture img" alt="Ganesh M Picture">
-			</div>
-			<div class="col-md-6">
-				<h1>Ganesh Murugan</h1>
-				<h3>Full Stack Web Developer</h3>
-			</div>
-		</header>
-	</div>
 
-  <div class="container-fluid">
-    <main class="row">
-      <div class="col-md-12">
-        <h2>Featured Work</h2>
-      </div>
-      <!-- Project 1 Start -->
-      <article class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="img/project-nww.jpg" alt="Nasa World Wind">
-          <div class="card-body">
-            <h4 class="card-title">Nasa World Wind</h4>
-            <p class="card-text">The City of Springfield, Oregon and the KGiSL Institute of Technology (Coimbatore, India) have teamed up to provide a secure public information portal based on NASA WorldWind technology.</p>
-            <a href="https://github.com/GaneshM35/Nasa_Kite" class="btn btn-primary">Source Code</a>
-          </div>
+<body>
+    <!-- Header Block Starts -->
+    <div class="container">
+        <header class="row">
+            <div class="col-md-6">
+                <img src="img/profileimg.jpg" class="profile-picture img-responsive" alt="Ganesh M Picture">
+            </div>
+            <div class="col-md-6">
+                <h1 class="profile-name">Ganesh Murugan</h1>
+                <h3 class="profile-title">Full Stack Web Developer</h3>
+            </div>
+        </header>
+        <div class="row">
+            <div class="col-md-12">
+                <hr>
+            </div>
         </div>
-      </article>
-      <!-- Project 1 End -->
-      <!-- Project 2 Start -->
-      <article class="col-md-4">
-        <div class="card" >
-          <img class="card-img-top" src="img/project-nww.jpg" alt="Nasa World Wind">
-          <div class="card-body">
-            <h4 class="card-title">Nasa World Wind</h4>
-            <p class="card-text">The City of Springfield, Oregon and the KGiSL Institute of Technology (Coimbatore, India) have teamed up to provide a secure public information portal based on NASA WorldWind technology.</p>
-            <a href="https://github.com/GaneshM35/Nasa_Kite" class="btn btn-primary">Source Code</a>
-          </div>
-        </div>
-      </article>
-      <!-- Project 2 End -->
-      <!-- Project 3 Start -->
-      <article class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="img/project-nww.jpg" alt="Nasa World Wind">
-          <div class="card-body">
-            <h4 class="card-title">Nasa World Wind</h4>
-            <p class="card-text">The City of Springfield, Oregon and the KGiSL Institute of Technology (Coimbatore, India) have teamed up to provide a secure public information portal based on NASA WorldWind technology.</p>
-            <a href="https://github.com/GaneshM35/Nasa_Kite" class="btn btn-primary">Source Code</a>
-          </div>
-        </div>
-      </article>
-      <!-- Project 3 Start -->
-    </main>
-  </div>
+    </div>
+    <!-- Header Block Ends -->
+    <!-- Recent Work Block Starts -->
+    <div class="container">
+        <main class="row">
+            <div class="col-md-12">
+                <h2>Featured Work</h2>
+            </div>
+            <!-- Project 1 Start -->
+            <article class="col-md-4">
+                <div class="project thumbnail">
+                    <img src="img/project-1-thumb-4x.png" class="img-responsive" alt="Web Portal Automation">
+                    <div class="project-body">
+                        <h4 class="project-title">Web Portal Automation</h4>
+                        <p class="project-text">Developing a Software robot that could reduce the faculty effort on making student’s assessment entry manually to University web portal</p>
+                        <a href="https://github.com/GaneshM35/awpa" class="btn" target="_blank">Source Code</a>
+                    </div>
+                </div>
+            </article>
+            <!-- Project 1 End -->
+            <!-- Project 2 Start -->
+            <article class="col-md-4">
+                <div class="project thumbnail">
+                    <img src="img/project-2-thumb-4x.png" class="img-responsive" alt="Nasa World Wind">
+                    <div class="project-body">
+                        <h4 class="project-title">Nasa World Wind</h4>
+                        <p class="project-text">A Secure public information portal based on NASA WorldWind technology for the City of Springfield, Oregon.</p>
+                        <a href="https://github.com/GaneshM35/Nasa_Kite" class="btn" target="_blank">Source Code</a>
+                    </div>
+                </div>
+            </article>
+            <!-- Project 2 End -->
+            <!-- Project 3 Start -->
+            <article class="col-md-4">
+                <div class="project thumbnail">
+                    <!--<img src="img/project-3-thumb-1x.png" srcset="img/project-3-thumb-1x.png 342w, img/project-3-thumb-2x.png 683w, img/project-3-thumb-3x.png 1024w, img/project-3-thumb-4x.png 1366w" class="img-responsive" alt="Leave Management System"> -->
+                    <img src="img/project-3-thumb-4x.png" class="img-responsive" alt="Leave Management System">
+                    <div class="project-body">
+                        <h4 class="project-title">Leave Management System</h4>
+                        <p class="project-text">Developed an online based common Leave management system for students and faculty members for a college.</p>
+                        <a href="https://github.com/GaneshM35/Leave-Management-System" class="btn" target="_blank">Source Code</a>
+                    </div>
+                </div>
+            </article>
+            <!-- Project 3 Start -->
+        </main>
+    </div>
+    <!-- Recent Work Block Ends -->
+    <div class="container">
+        <footer class="row">
+            <div class="footer col-md-12">
+                <p>Made with <i class="fas fa-heart love"></i> by <a href="https://github.com/GaneshM35" target="_blank">Ganesh M</a></p>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
