--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <header class="row">
             <div class="col-md-6">
-                <img src="img/profileimg.jpg" class="profile-picture img-responsive" alt="Ganesh M Picture">
+                <img src="img/Profileimg.jpg" class="profile-picture img-responsive" alt="Ganesh M Picture">
             </div>
             <div class="col-md-6">
                 <h1 class="profile-name">Ganesh Murugan</h1>
