Section Block added

--- a/index.html
+++ b/index.html
@@ -23,14 +23,25 @@
                 <h1 class="profile-name">Ganesh Murugan</h1>
                 <h3 class="profile-title">Full Stack Web Developer</h3>
             </div>
-        </header>
-        <div class="row">
             <div class="col-md-12">
                 <hr>
             </div>
-        </div>
+        </header>
     </div>
     <!-- Header Block Ends -->
+    <!-- Center Block Starts -->
+    <div class="container">
+        <section class="row">
+            <div class="col-md-12 project thumbnail">
+                <img src="img/project-4-thumb-4x.png" class="img-responsive" alt="Cozy Covai">
+                <div class="project-body">
+                    <h4 class="project-title">Cozy Covai</h4>
+                    <a href="https://github.com/GaneshM35/Cozy-Covai" class="btn" target="_blank">Source Code</a>
+                </div>
+            </div>
+        </section>
+    </div>
+    <!-- Center Block Starts -->
     <!-- Recent Work Block Starts -->
     <div class="container">
         <main class="row">
