--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <header class="row">
             <div class="col-md-6">
-                <img src="img/Profileimg.jpg" class="profile-picture img-responsive" alt="Ganesh M Picture">
+                <img src="img/Profileimg.jpg" class="profile-picture img-circle img-responsive" alt="Ganesh M Picture">
             </div>
             <div class="col-md-6">
                 <h1 class="profile-name">Ganesh Murugan</h1>
@@ -31,7 +31,7 @@
     <!-- Header Block Ends -->
     <!-- Center Block Starts -->
     <div class="container">
-        <section class="row">
+        <main class="row">
             <div class="col-md-12 project thumbnail">
                 <img src="img/project-4-thumb-4x.png" class="img-responsive" alt="Cozy Covai">
                 <div class="project-body">
@@ -39,15 +39,15 @@
                     <a href="https://github.com/GaneshM35/Cozy-Covai" class="btn" target="_blank">Source Code</a>
                 </div>
             </div>
-        </section>
+        </main>
     </div>
     <!-- Center Block Starts -->
     <!-- Recent Work Block Starts -->
     <div class="container">
-        <main class="row">
-            <div class="col-md-12">
+        <section class="row">
+            <header class="col-md-12">
                 <h2>Featured Work</h2>
-            </div>
+            </header>
             <!-- Project 1 Start -->
             <article class="col-md-4">
                 <div class="project thumbnail">
@@ -85,13 +85,14 @@
                 </div>
             </article>
             <!-- Project 3 Start -->
-        </main>
+        </section>
     </div>
     <!-- Recent Work Block Ends -->
     <div class="container">
         <footer class="row">
             <div class="footer col-md-12">
                 <p>Made with <i class="fas fa-heart love"></i> by <a href="https://github.com/GaneshM35" target="_blank">Ganesh M</a></p>
+                <p id="social">Get in touch with <a href="https://www.facebook.com/GaneshM635" target="_blank"><i class="fab fa-facebook-square fb"></i></a> <a href="https://twitter.com/GaneshM635" target="_blank"><i class="fab fa-twitter-square twitter"></i></a> <a href="https://plus.google.com/u/0/+GaneshM635" target="_blank"><i class="fab fa-google-plus-square google"></i></a> <a href="https://www.linkedin.com/in/ganeshm35/" target="_blank"><i class="fab fa-linkedin linkedin"></i></a> </p>
             </div>
         </footer>
     </div>
